[gd_scene load_steps=16 format=2]

[ext_resource path="res://TimeJob.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Prompt/Prompt-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/BluePanel.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Prompt/Prompt-LightItalic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Inter-Bold.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 13.0
bg_color = Color( 0, 0.305869, 0.419922, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=6]
size = 33
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=7]
default_font = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0.305882, 0.419608, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=9]
size = 72
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="BluePanel" type="Sprite" parent="."]
position = Vector2( 411, 677 )
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="BluePanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -343.0
margin_top = -382.0
margin_right = -391.0
margin_bottom = -437.0

[node name="results_label" type="Label" parent="BluePanel/Control"]
margin_left = 7.0
margin_top = 147.0
margin_right = 666.0
margin_bottom = 293.0
theme = SubResource( 2 )
align = 1
valign = 1
autowrap = true

[node name="title_label" type="Label" parent="BluePanel/Control"]
margin_left = 7.0
margin_top = 11.0
margin_right = 666.0
margin_bottom = 157.0
theme = SubResource( 2 )
text = "- Job Time -"
align = 1
valign = 1
autowrap = true

[node name="minutes" type="LineEdit" parent="BluePanel/Control"]
margin_left = 132.0
margin_top = 517.0
margin_right = 524.0
margin_bottom = 623.0
theme = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
align = 1
max_length = 3
placeholder_text = "Enter Minutes"

[node name="search_button" type="Button" parent="BluePanel/Control"]
margin_left = 228.0
margin_top = 683.0
margin_right = 423.0
margin_bottom = 748.0
theme = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "SEARCH"

[node name="part_number_search" type="LineEdit" parent="BluePanel/Control"]
visible = false
margin_left = 193.0
margin_top = 468.0
margin_right = 472.0
margin_bottom = 544.0

[node name="back_button" type="Button" parent="."]
margin_left = 34.0
margin_top = 56.0
margin_right = 151.0
margin_bottom = 167.0
theme = SubResource( 10 )
text = "<"

[connection signal="text_changed" from="BluePanel/Control/minutes" to="." method="_on_minutes_text_changed"]
[connection signal="text_entered" from="BluePanel/Control/minutes" to="." method="_on_minutes_text_entered"]
[connection signal="pressed" from="BluePanel/Control/search_button" to="." method="_on_search_button_pressed"]
[connection signal="text_entered" from="BluePanel/Control/part_number_search" to="." method="_on_part_number_search_text_entered"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
